<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="action_settings">Settings</string>
    <string name="pocetni_meni">Početni meni</string>
    <string name="start">Start</string>
    <string name="izlaz">Izlaz</string>
    <string name="igraci">Igrači</string>
    <string name="igrac_hint">Naziv igrača</string>
    <string name="igrac_dodaj">Dodaj igrača</string>
    <string name="prazno"></string>
    <string name="format_popis">%1$d: [%2$s] %3$d</string>
    <string name="where_kriterij">Naziv = ?</string>
    <string name="sortiranje_kriterij">Bodovi DESC</string>
    <string name="postavke_igre">Postavke igre</string>
    <string name="zapocni">Započni</string>
	<string-array name="teme">
	    <item>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Tema 1</item>
	    <item>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Tema 2</item>
	</string-array>
	<string name="parametarIstina">1</string>
	<string name="parametarKreirano">kreiran</string>
	<string name="parametarTema">tema</string>
	<string name="parametarIgracPrvi">igrac1</string>
	<string name="parametarIgracDrugi">igrac2</string>
	<string name="sharedPrefRjecnikIgraci">igraci</string>
	<string name="pobjeda">Pobjeda: </string>
	<string name="nerijeseno">Neriješeno</string>
	<string name="krizic">X</string>
	<string name="kruzic">O</string>
	<string name="racunaloLagano">Računalo Lagano</string>
	<string name="racunaloTesko">Računalo Teško</string>
</resources>
