<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.foi.air.tictactoe.PocetniFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/igraci" />
    
    <EditText
        android:id="@+id/etIgrac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/igrac_hint" />
    
    <Button 
        android:id="@+id/btnIgracDodaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/igrac_dodaj"
        />
    
	<ListView 
		android:id="@+id/lvListaIgraca"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:background="#cccccc" >
	</ListView>

</LinearLayout>
