<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hr.foi.air.tictactoe.PocetniFragment"
    android:background="@drawable/pozadina" 
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#cccccc"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:text="@string/pocetni_meni" />
    
    <Button 
        android:id="@+id/btnStart"
        android:text="@string/start"
        android:background="#cccccc"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Spinner 
        android:id="@+id/spTema"
        android:entries="@array/teme"
        android:background="#cccccc"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
	<Button 
        android:id="@+id/btnIgraci"
        android:text="@string/igraci"
        android:background="#cccccc"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button 
        android:id="@+id/btnIzlaz"
        android:text="@string/izlaz"
        android:background="#cccccc"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
